<resources>
    <string name="app_name" translatable="false">EcoMe</string>

    <string name="navigation_drawer_open">Apri menu</string>
    <string name="navigation_drawer_close">Apri menu</string>

    <string name="action_settings">Impostazioni</string>
    <string name="sito_web">Sito web</string>

    <string name="title_activity_loading">EcoMe</string>
    <string name="action_refresh">Aggiorna</string>
    <string name="checking_connection">Controllo la connessione</string>
    <string name="downloading_data">Scarico i dati</string>
    <string name="loading">Caricamento</string>
    <string name="title_activity_maps">Map</string>
    <string name="xhr_controller" translatable="false">xhr/</string>
    <string name="data_method" translatable="false">xhr_data</string>
    <string name="web_url" translatable="false">http://defcon2016.altervista.org/index.php/</string>
    <string name="sidney">Marcatore a Roma</string>
    <string name="title_activity_details">Dettagli</string>
    <string name="strutture_method" translatable="false">xhr_strutture</string>
    <string name="struttura_method" translatable="false">xhr_struttura</string>
    <string name="downloading_structures_data">Scarico i dati delle strutture</string>

    <string name="guida_uso">Guida all\'uso</string>
    <string name="licenze_versioni">Licenze e versioni</string>
    <string name="str_menu_tec">Calcolo dell\'indice</string>
    <string name="menu_credits">Credits</string>
    <string name="credits_value" translatable="false">
        <![CDATA[CEVID - Centro Veneto di Innovazione Digitale per Cittadini, Imprese e Pubblica Amministrazione.\n
        Università Ca\' Foscari & Regione del Veneto\n\n
        Azione 1: Open Data della Regione Veneto:\n
        dal paradigma DaaS per la fruizione dei dati alle smart app\n\n
        Coordinatore: prof. A.Cortesi\n\n
        Corso di laurea in Informatica - Università Ca\' Foscari]]></string>
    <string name="credits_creators_value" translatable="false">App progettata e realizzata da:</string>
    <string name="str_menu_map">Mappa</string>
    <string name="str_menu_meter">Meter</string>
    <string name="punteggio">Punteggio</string>
    <string name="dati_risalenti_a">Dati risalenti a</string>
    <string name="descrizione_struttura">Descrizione</string>
    <string name="credits_fragment_title">Credits</string>
    <string name="guida_fragment_title">Guida</string>
    <string name="calcolo_fragment_title">Calcolo dell\'indice</string>
    <string name="licenze_fragment_title">Licenze</string>
    <string name="sto_aggiornando">Aggiorno</string>
    <string name="mappa_fragment_title">Mappa</string>
    <string name="xhr_licenze" translatable="false">xhr_licenze</string>
    <string name="meter_fragment_title">Meter</string>
    <string name="guide_short">Guida</string>
    <string name="licenze_versioni_short">Licenze</string>
    <string name="webview_guida_url" translatable="false">guida/guida</string>
    <string name="webview_calcolo_url" translatable="false">guida/calcolo</string>
    <string name="no_internet">Impossibile accedere ad internet!</string>

    <string name="linkedin_bisconcin" translatable="false">https://www.linkedin.com/in/filippobisconcin/</string>
    <string name="linkedin_cabianca" translatable="false">https://www.linkedin.com/in/marco-cabianca-21a45812a/</string>
    <string name="linkedin_busolin" translatable="false">https://www.linkedin.com/in/francesco-busolin-729b17129/</string>
    <string name="tutorial_link_struttura">Premi per andare al sito della struttura</string>
    <string name="tutorial_title" translatable="false">Tutorial</string>
    <string name="contiue_offline">Continua</string>
    <string name="exit_offline">Esci</string>
    <string name="scarico_dettagli">Scarico i dettagli</string>
    <string name="app_require_gps">Questa app necessita del GPS</string>
    <string name="gps_title_attention">Attenzione!</string>
    <string name="gps_operation_no_valid">Operazione non valida!</string>
    <string name="url_gps_2_value" translatable="false">http://defcon2016.altervista.org/index.php/xhr/gps_to_value/</string>
    <string name="xhr_details_calcolo" translatable="false">xhr_details_calcolo/</string>
    <string name="close_details_dialog">Chiudi</string>
    <string name="tuorial_refresh_meter">Controlla la qualità del luogo in cui ti trovi utilizzando la tua posizione.</string>
    <string name="tutorial_meter_details">Una volta ottenuto un valore potrai controllare i valori che hanno contribuito al calcolo.</string>
    <string name="tutorial_details_details">Puoi controllare singolarmente i valori che hanno contribuito al calcolo.</string>
    <string name="tutorial_details_web">Visita il sito web della struttura</string>
    <string name="gps_not_active">Il GPS non attivo, vuoi attivarlo dalle impostazioni?</string>
    <string name="gps_not_active_title">GPS disabilitato</string>
    <string name="gps_alert_settings">Impostazioni</string>
    <string name="gps_alert_cancel">Annulla</string>
    <string name="try_later_gps">Posizione non accurata, ritenta tra un istante</string>
    <string name="gps_to_value_method" translatable="false">gps_to_value/</string>
    <string name="app_require_gps_toast">This app need your location</string>
    <string name="gps_alert_title">Attenzione!</string>
    <string name="gps_alert_body">Operazione non valida!</string>
    <string name="error_connection_server">Errore nella comunicazione con il server</string>
    <string name="dettagli">Dettagli</string>
    <string name="aggiorna">Aggiorna</string>
    <string name="meter_points">PUNTEGGIO</string>
    <string name="licenze_opendata">Licenze OpenData:</string>
    <string name="licenze_librerie">Licenze Librerie:</string>
    <string name="card_license">ECOme utilizza diverse librerie e OpenData con diverse licenze. In questa pagina è possibile consultarle singolarmente.</string>
    <string name="desc_meter">Puoi controllare la qualità dell\'aria del luogo in cui ti trovi grazie al GPS. La tua posizione verrà utilizzata per interrogare il database sul server e il punteggio finale sarà visualizzato nell\'indicatore.</string>
</resources>
