<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_menu"
            android:icon="@drawable/ic_action_name"
            android:title="Menu" />

        <item
            android:id="@+id/menu_meter"
            android:icon="@drawable/vect_speed_meter_1"
            android:title="@string/str_menu_meter" />

        <item
            android:id="@+id/menu_map"
            android:icon="@drawable/vect_worldwide"
            android:title="@string/str_menu_map" />

        <item
            android:id="@+id/menu_guida"
            android:icon="@drawable/vect_info"
            android:title="@string/guida_uso" />
        <item
            android:id="@+id/menu_calc"
            android:icon="@drawable/vect_calculator"
            android:title="@string/str_menu_tec" />

        <item
            android:id="@+id/menu_license"
            android:icon="@drawable/vect_agreement"
            android:title="@string/licenze_versioni" />

        <item
            android:id="@+id/menu_credits"
            android:icon="@drawable/vect_keyboard"
            android:title="@string/menu_credits" />

    </group>


    <item android:title="Links">
        <menu>
            <item
                android:id="@+id/menu_web"
                android:icon="@drawable/vect_link"
                android:title="@string/sito_web" />
        </menu>
    </item>


</menu>
